# QuantCore

./: AGENTS.md  CMakeLists.txt  hft_test  test_debug  test_debug.cpp  test_debug2  test_debug2.cpp  test_debug3  test_debug3.cpp  test_market  test_market.cpp  test_order_book
benchmarks/: Makefile  benchmark  benchmark.cpp  flamegraph_gen.sh  perf_profile.sh  run_all_benchmarks.sh  simd_benchmark  simd_benchmark.cpp
docs/: architecture.md
include/hft/: arena.hpp  backtester.hpp  benchmark.hpp  binance_feed.hpp  exchange.hpp  lock_free_queue.hpp  logging.hpp  market_data_feed.hpp  matching_engine.hpp  metrics.hpp  object_pool.hpp  order.hpp  order_book.hpp  publisher.hpp  risk_manager.hpp  sequencer.hpp  simd.hpp  strategy.hpp  thread_pool.hpp  thread_safe_matching_engine.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_order_book.cpp
